Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "_",
     "custom": "_"
   },
-  "bg_color": "#ffffff",
+  "bg_color": "#030303",
   "repository": "ecomplus-stores/pontualgames",
   "logo": "/img/uploads/logo.png",
   "name": "Pontual Games",
