--- a/content/settings.json
+++ b/content/settings.json
@@ -4,7 +4,7 @@
   "primary_color": "#ca0000",
   "theme": {
     "bootswatch": "_",
-    "custom": "-"
+    "custom": "_"
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/pontualgames",
